--- a/tema_undangan/tema_2/style.css
+++ b/tema_undangan/tema_2/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Island+Moments&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Joan&display=swap');
 
 @keyframes slideInFromTop {
   0% {
@@ -78,8 +79,31 @@
 }
 
 .bg-page6{
-  background-color: #9b9893;
-  height: 120vh;
+  background-image: url('https://cdn.undanganweb.com/hi/2022/03/IMG_5871.png');
+  height: 190vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bg-page7{
+    background-color: rgba(91,87,78,0.61) !important;
+  height: 280vh;
+}
+
+.bg-page9{
+  height: 100vh;
+    background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.bage-page10{
+  background-color: #72706a;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .text-indent{
@@ -109,4 +133,9 @@
 .menuju{
   font-family: 'Island Moments', cursive;
   font-size: 28px;
+}
+
+
+.cardTitleFont{
+  font-family: 'Joan', serif;
 }
