--- a/tema_undangan/tema_2/style.css
+++ b/tema_undangan/tema_2/style.css
@@ -88,7 +88,7 @@
 
 .bg-page7{
     background-color: rgba(91,87,78,0.61) !important;
-  height: 280vh;
+  height: 263vh;
 }
 
 .bg-page9{
@@ -98,12 +98,16 @@
   background-repeat: no-repeat;
 }
 
-.bage-page10{
-  background-color: #72706a;
+.bg-page10{
+  /* background-color: #72706a; */
+  background: linear-gradient(to bottom, rgba(255,0,0,0),  #72706a);
   height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  margin-top: -100vh;
+}
+
+.bg-page11{
+  background-color: #72706a;
+  height: 50vh;
 }
 
 .text-indent{
@@ -138,4 +142,15 @@
 
 .cardTitleFont{
   font-family: 'Joan', serif;
+}
+
+.footerTitleFont{
+  font-family: 'Joan', serif;
+  font-size: 30px;
+}
+
+
+.companyNameFont{
+  font-family: 'Island Moments', cursive;
+  font-size: 28px;
 }
