--- a/tema_undangan/tema_3/style.css
+++ b/tema_undangan/tema_3/style.css
@@ -83,6 +83,15 @@
     background-image: url('https://digition.id/wp-content/uploads/2022/01/11Y-1.png');
 }
 
+.imageBatas4{
+    height: 12vh;
+    margin-top: -19vh;
+    background-image: url('https://digition.id/wp-content/uploads/2022/01/fix11.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 
 .fontMempelai{
     font-family: 'Vujahday Script', cursive;
@@ -142,6 +151,14 @@
     color: #3E2723;
 }
 
+.fontMadeIn{
+    font-family: 'Gentium Plus', serif;
+    font-size: 12px;
+    color: #3E2723;
+    text-align: center;
+}
+
+
 .pImage{
     font-family: 'Great Vibes', cursive;
     font-size: 30px;
@@ -186,6 +203,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1;
   }
   
   .navbar a {
