--- a/tema_undangan/tema_1/style.css
+++ b/tema_undangan/tema_1/style.css
@@ -2,6 +2,13 @@
 
 /* Mobile */
 @media screen and (max-width: 500px){
+    .overflowAuto {
+        overflow-y: scroll;
+        overflow-x: hidden;
+        height: 20vh;
+        width: 100%;
+      }
+
     .kupu{
         margin-top: -50vh;
     margin-left: -10vh;
@@ -90,6 +97,13 @@ iframe{
 
 /* Desktop */
 @media screen and (min-width: 501px){
+    .overflowAuto {
+        overflow-y: scroll;
+        overflow-x: hidden;
+        height: 20vh;
+        width: 100%;
+      }
+
     .kupu{
         margin-top: -85vh;
     margin-left: -10vh;    
@@ -255,8 +269,6 @@ iframe{
     font-size: 50px;
     color: #8D6E63;
 }
-
-
 
 .fontName{
     font-family: 'Pinyon Script', cursive;
