--- a/tema_undangan/tema_3/style.css
+++ b/tema_undangan/tema_3/style.css
@@ -15,6 +15,13 @@
     display: none;
 }
 
+.overflowAuto {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 20vh;
+    width: 100%;
+}
+
 .bg-page1{
     background-image: url('https://digition.id/wp-content/uploads/2022/01/fix-background-1-scaled.jpg');
     height: 80vh;
