--- a/tema_undangan/tema_5/style.css
+++ b/tema_undangan/tema_5/style.css
@@ -1,5 +1,131 @@
 @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap');
 
+/* Mobile */
+@media screen and (max-width: 500px) {
+    .bg-pagecover{
+        background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+
+    .bg-page2{
+        background-color: #ffffe6;
+        height: 220vh;
+    }
+
+    .bg-page3{
+        background-image: url('./img/bg-img.png'), url('https://images.ctfassets.net/q40z6pfqje6o/3LtK6YN6dXZlCncHHdLFH3/224ff250008085fab0134a9a92eb182c/5698719-ai.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 50vh;
+        margin-top: -5vh;
+    }
+
+    .bg-page4{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/U9PTJJXcez5lw0NVL16H6/51bb5917e53b18242e62f2e14017b62e/New_Project__5_.png'), url('./img/bg-img2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 85vh;
+        margin-top: -5vh;
+    }
+
+    .bg-page5{
+        background-color: #ffffe6;
+        height: 125vh;
+    }
+    
+    
+
+    .bg-page6{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/01QcYN53sWodwqR7gvquz5/f2901a8caa319c2919353d49c86d5770/New_Project__9_.png'), url('./img/bg-img.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 120vh;
+    }
+    
+    .bg-page7{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/2rvAyhhIJ74iEzdioDn7zI/a2b461f702e9cb403fce85bb90aed3b7/Polygon-1s-1141px.svg'), url('./img/bg-img.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 160vh;
+    }
+    
+    
+}
+
+/* Desktop */
+@media screen and (min-width: 501px) {
+    .bg-pagecover{
+        background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+
+    .bg-page2{
+        background-color: #ffffe6;
+        height: 180vh;
+    }
+
+    .bg-page3{
+        background-image: url('./img/bg-img.png'), url('https://images.ctfassets.net/q40z6pfqje6o/3LtK6YN6dXZlCncHHdLFH3/224ff250008085fab0134a9a92eb182c/5698719-ai.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 30vh;
+        margin-top: -5vh;
+    }
+
+    .bg-page4{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/U9PTJJXcez5lw0NVL16H6/51bb5917e53b18242e62f2e14017b62e/New_Project__5_.png'), url('./img/bg-img2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 60vh;
+        margin-top: -5vh;
+    }
+
+    .bg-page5{
+        background-color: #ffffe6;
+        height: 100vh;
+    }
+
+    .bg-page6{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/01QcYN53sWodwqR7gvquz5/f2901a8caa319c2919353d49c86d5770/New_Project__9_.png'), url('./img/bg-img.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+    
+    .bg-page7{
+        background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/2rvAyhhIJ74iEzdioDn7zI/a2b461f702e9cb403fce85bb90aed3b7/Polygon-1s-1141px.svg'), url('./img/bg-img.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 160vh;
+    }
+    
+    
+
+    .overflowFixed{
+        position: fixed;
+      }
+        .overflowAuto2 {
+            width: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    }
+}
+    
+
 .none{
     display: none;
 }
@@ -11,62 +137,18 @@
     width: 100%;
 }
 
-.bg-pagecover{
-    background-image: url('https://cdn-uploads.our-wedding.link/3555e600-f65f-11eb-ac04-7b83682bd801.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-}
 
 .bg-page1{
     background-color: #5a7178;
     height: 50vh;
 }
 
-.bg-page2{
-    background-color: #ffffe6;
-    height: 220vh;
-}
 
-.bg-page3{
-    background-image: url('./img/bg-img.png'), url('https://images.ctfassets.net/q40z6pfqje6o/3LtK6YN6dXZlCncHHdLFH3/224ff250008085fab0134a9a92eb182c/5698719-ai.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 50vh;
-    margin-top: -5vh;
-}
 
-.bg-page4{
-    background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/U9PTJJXcez5lw0NVL16H6/51bb5917e53b18242e62f2e14017b62e/New_Project__5_.png'), url('./img/bg-img2.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 85vh;
-    margin-top: -5vh;
-}
 
-.bg-page5{
-    background-color: #ffffe6;
-    height: 125vh;
-}
 
-.bg-page6{
-    background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/01QcYN53sWodwqR7gvquz5/f2901a8caa319c2919353d49c86d5770/New_Project__9_.png'), url('./img/bg-img.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 120vh;
-}
 
-.bg-page7{
-    background-image:  url('https://images.ctfassets.net/q40z6pfqje6o/2rvAyhhIJ74iEzdioDn7zI/a2b461f702e9cb403fce85bb90aed3b7/Polygon-1s-1141px.svg'), url('./img/bg-img.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 160vh;
-}
+
 
 .undangan-btn.v-btn--outlined{
     border: thin solif black;
