--- a/tema_undangan/tema_7/style.css
+++ b/tema_undangan/tema_7/style.css
@@ -2,6 +2,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Joan&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
+/* Mobile */
+@media screen and (max-width: 500px){
+    .bg-page2 {
+        background-color: #fff;
+        height: 80vh;
+    }
+
+    .bg-page2_1 {
+        background-color: #eef8ff;
+        height: 210vh;
+    }
+
+    .bg-page3 {
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+        height: 130vh;
+    }
+
+    .bg-page4 {
+        background-color: #fff;
+        height: 350vh;
+    }
+    
+
+    .bg-page5{
+        background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/f92dc892d7faba8c2253a2ccfca156ba6ad908ad.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 30vh;
+    }
+    
+
+    .fontAkad {
+        font-family: 'Satisfy', cursive;
+        font-size: 30px;
+    }
+
+    .fontLove {
+        font-family: 'Satisfy', cursive;
+        font-size: 40px;
+    }
+}
+/* Desktop */
+@media screen and (min-width:501px) {
+    .bg-page2 {
+        background-color: #fff;
+        height: 70vh;
+    }
+
+    .bg-page2_1 {
+        background-color: #eef8ff;
+        height: 100vh;
+    }
+
+    .bg-page3 {
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+
+    .bg-page4 {
+        background-color: #fff;
+        height: 350vh;
+    }
+    
+
+    .bg-page5{
+        background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/f92dc892d7faba8c2253a2ccfca156ba6ad908ad.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 30vh;
+    }
+    
+
+    .fontAkad {
+        font-family: 'Satisfy', cursive;
+        font-size: 40px;
+    }
+
+    .fontLove {
+        font-family: 'Satisfy', cursive;
+        font-size: 50px;
+    }
+    
+    
+}
 .none {
     display: none;
 }
@@ -14,50 +104,17 @@
 }
 
 .bg-cover {
-    background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/1949d9111354e8962623050b26440179f5caddd0.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     height: 100vh;
 }
 
 .bg-page1 {
-    background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/1949d9111354e8962623050b26440179f5caddd0.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     height: 100vh;
-}
-
-.bg-page2 {
-    background-color: #fff;
-    height: 80vh;
-}
-
-.bg-page2_1 {
-    background-color: #eef8ff;
-    height: 210vh;
-}
-
-.bg-page3 {
-    background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/b764db47f4737e605f7ab557461fb11a0b8834b3.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 130vh;
-}
-
-.bg-page4 {
-    background-color: #fff;
-    height: 350vh;
-}
-
-.bg-page5{
-    background-image: url('./img/blue_img.png'), url('https://demo.datengdong.com/uploads/original/gallery/f92dc892d7faba8c2253a2ccfca156ba6ad908ad.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 30vh;
 }
 
 .bg-page6 {
@@ -92,15 +149,7 @@
     font-size: 30px;
 }
 
-.fontAkad {
-    font-family: 'Satisfy', cursive;
-    font-size: 30px;
-}
 
-.fontLove {
-    font-family: 'Satisfy', cursive;
-    font-size: 40px;
-}
 
 /* content fixed */
 
