--- a/tema_undangan/tema_8/style.css
+++ b/tema_undangan/tema_8/style.css
@@ -9,3 +9,10 @@
 .fontPage1{
     font-family: 'Yellowtail', cursive;
 }
+
+.overflowAuto {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 60vh;
+    width: 100%;
+}
